--- a/css/style.css
+++ b/css/style.css
@@ -65,10 +65,11 @@ body{
 
 .navbar a{
   position: relative;
-  font-size: 1.7rem;
+  font-size: 1.9rem;
   color: var(--white-color);
-  font-weight: 500;
+  font-weight: 600;
   margin-right: 3.5rem;
+  transition: .1s linear;
 }
 
 .header.sticky .navbar a{
@@ -130,6 +131,7 @@ section{
   font-size: 3.2rem;
   font-weight: 700;
   line-height: .3rem;
+  margin-bottom: 1rem;
 }
 
 .home .home-content h1{
@@ -341,6 +343,63 @@ span{
   margin: 2rem 0 3rem;
 }
 
+.skills{
+  padding: 7%;
+}
+
+.skills .heading{
+  margin-bottom: 5rem;
+}
+
+.skills-container{
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  align-items: flex-start;
+  gap: 2.5rem;
+  justify-content: center;
+  cursor: pointer;
+}
+
+.skills-container .skills-box{
+  position: relative;
+  text-align: center;
+  color: var(--white-color);
+  box-shadow: 0 .1rem .5rem var(--shadow-color);
+  border-radius: .8rem;
+  padding: 2rem;
+  z-index: 0;
+  height: 31rem;
+}
+
+.skills .skills-container .skills-box::before{
+  content: '';
+  position: absolute;
+  bottom: 0; left: 0; right: 0;
+  height: 18rem;
+  z-index: -1;
+  background: var(--main-color);
+  clip-path: polygon(50% 0%, 100% 38%, 100% 100%, 0 100%, 0% 38%);
+}
+
+.skills-container .skills-box img{
+  height: 15rem;
+  transition: .2s linear;
+  position: relative;
+}
+
+.skills-container .skills-box:hover img{
+  transform: translateY(-1rem);
+}
+
+.skills-container .skills-box h3{
+  font-size: 2.6rem;
+}
+
+.skills-container .skills-box p{
+  font-size: 1.6rem;
+  line-height: 1.8;
+}
+
 .services{
   min-height: auto;
   padding-bottom: 7rem;
@@ -420,6 +479,7 @@ span{
 
 .portfolio-box img{
   width: 100%;
+  height: 24rem;
   transition: .5s ease;
 }
 
@@ -795,6 +855,8 @@ span{
   .home-img img{
     display: none;
   }
+
+  .skills,
   .services,
   .portfolio{
     padding-bottom: 7rem;
@@ -920,10 +982,14 @@ span{
     width: 70vh;
     margin-top: -2rem;
   }
+
+  .skills,
   .services,
   .portfolio{
     margin-bottom: 3rem;
   }
+
+  .skills .skills-container,
   .portfolio .portfolio-container{
     grid-template-columns: repeat(2, 1fr);
   }
@@ -940,6 +1006,7 @@ span{
 }
 
 @media (max-width: 617px){
+  .skills .skills-container,
   .portfolio .portfolio-container{
     grid-template-columns: 1fr;
   }
