--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@
 .dark-mode{
   --bg-color: #080418;
   --text-color: #fdfdfd;
-  --main-color: #6971a0;
+  --main-color: #092efa;
   --white-color: #080808;
   --shadow-color: rgba(0,0,0,.7);
 }
@@ -629,29 +629,57 @@ span{
   flex-wrap: wrap;
 }
 
-.contact form .input-box input,
-.contact form textarea{
+.input-box .input-field{
+  width: 48.5%;
+}
+
+.field .item{
   width: 100%;
-  padding: 1.5rem;
+  padding: 1.2rem;
+  background: transparent;
+  border: 2px solid var(--main-color);
+  outline: none;
+  border-radius: .8rem;
   font-size: 1.6rem;
   color: var(--text-color);
-  background: var(--bg-color);
-  border-radius: .8rem;
-  margin: .7rem 0;
-  box-shadow: 0 .1rem .5rem var(--shadow-color);
+  margin: .8rem 0;
 }
 
-.contact form .input-box input{
-  width: 49%;
+.field .item::placeholder{
+  color: #a0a7be;
 }
 
-.contact form textarea{
+.field .error-txt{
+  font-size: 1rem;
+  color: red;
+  text-align: center;
+  margin: -5px 0 10px;
+  display: none;
+}
+
+.contact form .textarea-field .item{
   resize: none;
 }
 
-.contact form .btn{
-  margin-top: 2rem;
+.contact button{
+  display: inline-block;
+  padding: 1.2rem 2.8rem;
+  background: var(--main-color);
+  border-radius: .6rem;
+  box-shadow: 0 .2rem .5rem var(--shadow-color);
+  font-size: 1.6rem;
+  color: var(--white-color);
+  letter-spacing: .1rem;
+  font-weight: 600;
+  border: .2rem solid transparent;
   cursor: pointer;
+  transition: .5s ease;
+}
+
+.contact button:hover{
+  background: transparent;
+  color: var(--main-color);
+  border-color: var(--main-color);
 }
 
 .blogs h2{
@@ -801,6 +829,222 @@ span{
   color: var(--white-color);
 }
 
+/* ======== custom css project01 start ======== */
+
+.container-project01{
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.container-project01 .container-box{
+  position: relative;
+  width: 100%;
+  max-width: 400px;
+  background-color: var(--main-color);
+  padding: 30px;
+  overflow: hidden;
+  border-radius: .8rem;
+  box-shadow: var(--shadow-color);
+}
+
+.container-project01 .container-box .heading{
+  color: var(--white-color);
+  margin-bottom: 3rem;
+}
+
+.container-project01 .container-box label{
+  display: block;
+  font-size: 2rem;
+  margin-bottom: .8rem;
+  color: var(--white-color);
+}
+
+.container-project01 .container-box select{
+  width: 100%;
+  padding: .8rem;
+  text-transform: capitalize;
+  border-radius: .3rem;
+  margin-bottom: 1.5rem;
+  color: var(--text-color);
+  font-size: 1.6rem;
+}
+
+.container-project01 span{
+  color: var(--white-color);
+}
+
+.btn-start{
+  width: 100%;
+  height: 5rem;
+  background-color: var(--bg-color);
+  color: var(--text-color);
+  border: none;
+  margin-top: 3rem;
+  border-radius: .8rem;
+  font-size: 2rem;
+  font-weight: 600;
+  cursor: pointer;
+  transition: all .3s linear;
+}
+
+.btn-start:hover{
+  background-color: transparent;
+  color: var(--white-color);
+  border: solid var(--white-color);
+}
+
+.btn-start:disabled{
+  cursor: not-allowed;
+  background-color: #6971a0;
+}
+
+.hide{
+  display: none;
+}
+
+.timer{
+  width: 100%;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 30px;
+}
+
+.timer .progress{
+  position: relative;
+  width: 100%;
+  height: 40px;
+  background-color: transparent;
+  border-radius: 2.5rem;
+  overflow: hidden;
+  margin-bottom: .9rem;
+  border: 3px solid#6971a0;
+}
+
+.timer .progress .progress-bar{
+  width: 50%;
+  height: 100%;
+  border-radius: 30px;
+  overflow: hidden;
+  background: linear-gradient(to right, #ea571c, #b478f1);
+  transition: 1s linear;
+}
+
+.timer .progress .progress-text{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: var(--white-color);
+  font-size: 1.2rem;
+  font-weight: 500;
+}
+
+.question-wrapper .number {
+  color: #a2aace;
+  font-size: 25px;
+  font-weight: 500;
+  margin-bottom: 20px;
+}
+
+.question-wrapper .number .total{
+  color: #6971a0;
+  font-size: 1.2rem;
+}
+
+.question-wrapper .question{
+  color: var(--white-color);
+  font-size: 1.6rem;
+  font-weight: 500;
+  margin-bottom: 3rem;
+}
+
+.answer-wrapper .answer{
+  width: 100%;
+  height: 60px;
+  padding: 20px;
+  border-radius: 10px;
+  color: var(--white-color);
+  border: 3px solid #3f4868;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 20px;
+  cursor: pointer;
+  transition: .3s linear;
+}
+
+.answer .checkbox{
+  width: 20px;
+  height: 20px;
+  font-size: 12px;
+  border-radius: 50%;
+  border: 3px solid #3f4868;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: all 0.3s;
+}
+
+.answer .checkbox .icon{
+  opacity: 0;
+}
+
+.answer:hover .checkbox,
+.answer.selected .checkbox{
+  background-color: #0c80ef;
+  border-color: #0c80ef;
+}
+
+.answer.selected .checkbox .icon{
+  opacity: 1;
+}
+
+.answer.correct{
+  border-color: #7bec10;
+}
+
+.answer.wrong{
+  border-color: #e92626;
+}
+
+.question-wrapper,
+.answer-wrapper{
+  margin-bottom: 50px;
+}
+
+.btn.next{
+  /* show when answer submit */
+  display: none;
+}
+
+.end-screen .score{
+  color: #fff;
+  font-weight: 500;
+  font-size: 25px;
+  margin-bottom: 80px;
+  text-align: center;
+}
+
+.end-screen .score-text{
+  color: #a2aace;
+  font-size: 16px;
+  margin-bottom: 120px;
+}
+
+@media (max-width:468){
+  .container-project01 .container-box{
+    min-height: 100vh;
+    max-width: 100%;
+    border-radius: 0;
+  }
+}
+
+
+/* ======== custom css project01 end======== */
 
 /*Breakpoints*/
 @media (max-width: 1200px){
