--- a/css/style.css
+++ b/css/style.css
@@ -611,6 +611,8 @@ span{
   background: var(--main-color);
 }
 
+/* cotact css start */
+
 .contact h2{
   margin-bottom: 2rem;
 }
@@ -681,6 +683,7 @@ span{
   color: var(--main-color);
   border-color: var(--main-color);
 }
+/* cotact css end */
 
 .blogs h2{
   margin-bottom: 2rem;
@@ -829,223 +832,6 @@ span{
   color: var(--white-color);
 }
 
-/* ======== custom css project01 start ======== */
-
-.container-project01{
-  min-height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.container-project01 .container-box{
-  position: relative;
-  width: 100%;
-  max-width: 400px;
-  background-color: var(--main-color);
-  padding: 30px;
-  overflow: hidden;
-  border-radius: .8rem;
-  box-shadow: var(--shadow-color);
-}
-
-.container-project01 .container-box .heading{
-  color: var(--white-color);
-  margin-bottom: 3rem;
-}
-
-.container-project01 .container-box label{
-  display: block;
-  font-size: 2rem;
-  margin-bottom: .8rem;
-  color: var(--white-color);
-}
-
-.container-project01 .container-box select{
-  width: 100%;
-  padding: .8rem;
-  text-transform: capitalize;
-  border-radius: .3rem;
-  margin-bottom: 1.5rem;
-  color: var(--text-color);
-  font-size: 1.6rem;
-}
-
-.container-project01 span{
-  color: var(--white-color);
-}
-
-.btn-start{
-  width: 100%;
-  height: 5rem;
-  background-color: var(--bg-color);
-  color: var(--text-color);
-  border: none;
-  margin-top: 3rem;
-  border-radius: .8rem;
-  font-size: 2rem;
-  font-weight: 600;
-  cursor: pointer;
-  transition: all .3s linear;
-}
-
-.btn-start:hover{
-  background-color: transparent;
-  color: var(--white-color);
-  border: solid var(--white-color);
-}
-
-.btn-start:disabled{
-  cursor: not-allowed;
-  background-color: #6971a0;
-}
-
-.hide{
-  display: none;
-}
-
-.timer{
-  width: 100%;
-  height: 100px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-bottom: 30px;
-}
-
-.timer .progress{
-  position: relative;
-  width: 100%;
-  height: 40px;
-  background-color: transparent;
-  border-radius: 2.5rem;
-  overflow: hidden;
-  margin-bottom: .9rem;
-  border: 3px solid#6971a0;
-}
-
-.timer .progress .progress-bar{
-  width: 50%;
-  height: 100%;
-  border-radius: 30px;
-  overflow: hidden;
-  background: linear-gradient(to right, #ea571c, #b478f1);
-  transition: 1s linear;
-}
-
-.timer .progress .progress-text{
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: var(--white-color);
-  font-size: 1.2rem;
-  font-weight: 500;
-}
-
-.question-wrapper .number {
-  color: #a2aace;
-  font-size: 25px;
-  font-weight: 500;
-  margin-bottom: 20px;
-}
-
-.question-wrapper .number .total{
-  color: #6971a0;
-  font-size: 1.2rem;
-}
-
-.question-wrapper .question{
-  color: var(--white-color);
-  font-size: 1.6rem;
-  font-weight: 500;
-  margin-bottom: 3rem;
-}
-
-.answer-wrapper .answer{
-  width: 100%;
-  height: 60px;
-  padding: 20px;
-  border-radius: 10px;
-  color: var(--white-color);
-  border: 3px solid #3f4868;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  margin-bottom: 20px;
-  cursor: pointer;
-  transition: .3s linear;
-}
-
-.answer .checkbox{
-  width: 20px;
-  height: 20px;
-  font-size: 12px;
-  border-radius: 50%;
-  border: 3px solid #3f4868;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  transition: all 0.3s;
-}
-
-.answer .checkbox .icon{
-  opacity: 0;
-}
-
-.answer:hover .checkbox,
-.answer.selected .checkbox{
-  background-color: #0c80ef;
-  border-color: #0c80ef;
-}
-
-.answer.selected .checkbox .icon{
-  opacity: 1;
-}
-
-.answer.correct{
-  border-color: #7bec10;
-}
-
-.answer.wrong{
-  border-color: #e92626;
-}
-
-.question-wrapper,
-.answer-wrapper{
-  margin-bottom: 50px;
-}
-
-.btn.next{
-  /* show when answer submit */
-  display: none;
-}
-
-.end-screen .score{
-  color: #fff;
-  font-weight: 500;
-  font-size: 25px;
-  margin-bottom: 80px;
-  text-align: center;
-}
-
-.end-screen .score-text{
-  color: #a2aace;
-  font-size: 16px;
-  margin-bottom: 120px;
-}
-
-@media (max-width:468){
-  .container-project01 .container-box{
-    min-height: 100vh;
-    max-width: 100%;
-    border-radius: 0;
-  }
-}
-
-
-/* ======== custom css project01 end======== */
-
 /*Breakpoints*/
 @media (max-width: 1200px){
   html{
@@ -1114,13 +900,17 @@ span{
 }
 
 @media (max-width: 768px){
+  body{
+    overflow: hidden;
+  }
+
   #menu-icon{
     display: block;
     cursor: pointer;
   }
   #darkMode-icon{
     position: absolute;
-    right: 7rem;
+    right: 6rem;
     font-size: 2.6rem;
     color: var(--text-color);
     margin-bottom: .1rem;
@@ -1130,11 +920,12 @@ span{
     top: 100%;
     left: 0;
     width: 100%;
-    padding: 1rem 3%;
+    padding: 1rem 2%;
     background: var(--bg-color);
     border-top: .1rem solid rgba(0, 0, 0, .2);
     box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .1);
     display: none;
+    box-sizing: border-box;
   }
   .navbar.active{
     display: block;
